- INTERNAL: Write repository to disk when closing application only if repository has been modified or refreshed
- INTERNAL: Write favorites to disk when closing application only if favorites have been modified
- INTERNAL: Write radio list to disk when closing application only if have been modified
- INTERNAL: Write podcast list to disk when closing application only if have been modified
- FIX: Deleting many files from device freezes aTunes gui for some seconds [2855962]
- FIX: LyricWiki engine returned lyrics with URLs
- FIX: Opening web browser does not work on Ubuntu
- FIX: Validate repository content when loading it (patch from Laurent Cathala)

aTunes 1.13.5
-------------
- FIX: MPlayer priority on Windows should be higher (patch by Ray Barlow)
- FIX: Windows Vista/7 ready application icons
- FIX: Show play list information enabled for more than one audio object [2786446]
- FIX: Sort by file name option sorts audio object in folder view in wrong order [2807803]
- FIX: Song info dialog not resizable [2824009]
- FIX: After renaming an audio file, repository keeps reference to old name

aTunes 1.13.4
-------------
- Lyricsfly engine update
- FIX: Images with alpha channel are displayed wrong
- FIX: Windows 7 ready application icon
- FIX: Too much memory needed when retrieving artist images from Last.fm with original size
- FIX: Gui may freeze if audio files are on a remote storage device and the connection speed is slow

aTunes 1.13.3
-------------
- FIX: LyricWiki XML API is offline
- FIX: Search: wrong song is added [2820043]
- FIX: Column selection popup menu opens at the wrong location [2819588]
- FIX: When removing songs from favorites, not all songs were removed
- FIX: Extract Image action opens dialog in wrong monitor

aTunes 1.13.2
-------------
- FIX: Last.fm issue with new image size
- FIX: Wrong export to device with album artist pattern [2811019]
- FIX: Invalid handling of disc number [2810837]
- FIX: Mute bug with MPlayer engine