@@ -23,6 +23,8 @@ import java.io.Serializable;
 import java.util.ArrayList;
 import java.util.List;
 
+import net.sourceforge.atunes.model.AudioObject;
+
 /**
  * This class is used to contain all playlists when storing and reading from
  * disk.
@@ -95,6 +97,16 @@ public class ListOfPlayLists implements Serializable {
      */
     void setSelectedPlayList(int selectedPlayList) {
         this.selectedPlayListIndex = selectedPlayList;
+    }
+    
+    /**
+     * Fills contents of a list of playlists
+     * @param contents
+     */
+    public void setContents(List<List<AudioObject>> contents) {
+    	for (int i = 0; i < getPlayLists().size(); i++) {
+    		getPlayLists().get(i).setContent(contents.get(i));
+    	}
     }
 
 }
